[gd_scene load_steps=12 format=2]

[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Escenas/Nivel 1/Pilar.gd" type="Script" id=2]
[ext_resource path="res://Tileset/Decoraciones/Estalagtita/Estalagtita.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "Estalagtita",
"speed": 5.0
} ]

[sub_resource type="ConvexPolygonShape2D" id=25]
points = PoolVector2Array( -5.672, 6.515, -5.686, -6.895, 7.997, 0.16 )

[sub_resource type="ConvexPolygonShape2D" id=26]
points = PoolVector2Array( -4.989, 6.515, -4.942, -6.895, 7.997, 0.16 )

[sub_resource type="Gradient" id=19]
colors = PoolColorArray( 0.776471, 0.541176, 0.443137, 1, 1, 1, 1, 0.12549 )

[sub_resource type="GradientTexture" id=20]
gradient = SubResource( 19 )

[sub_resource type="Curve" id=21]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.987755, 0.487213 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=22]
curve = SubResource( 21 )

[sub_resource type="ParticlesMaterial" id=23]
emission_shape = 2
emission_box_extents = Vector3( 20, 5, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, -98, 0 )
initial_velocity = 30.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 22 )
color_ramp = SubResource( 20 )

[node name="Area2D" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 24 )
animation = "Estalagtita"

[node name="Hitbox" parent="." instance=ExtResource( 1 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -1.608 )
rotation = 1.5708
shape = SubResource( 25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.379 )
rotation = 1.56207
shape = SubResource( 26 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Particles2D" type="Particles2D" parent="."]
show_behind_parent = true
position = Vector2( 0, -7.793 )
amount = 50
lifetime = 0.5
process_material = SubResource( 23 )

[node name="TimerPilar" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="TimerPilar" to="." method="_on_TimerPilar_timeout"]

[editable path="Hitbox"]
